--- a/Nelsonfox/hello_android/res/layout/activity_main.xml
+++ b/Nelsonfox/hello_android/res/layout/activity_main.xml
@@ -1,16 +1,31 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+   <Button 
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="线性布局实现注册窗口"
+       android:tag="linear_layout"
+       android:onClick="onClick"/>
+   <Button 
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="相对布局实现注册窗口"
+       android:tag="relative_layout"
+       android:onClick="onClick"/>
+   <Button 
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="表格布局实现注册窗口"
+       android:tag="table_layout"
+       android:onClick="onClick"/>
+   <Button 
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="网格布局实现注册窗口"
+       android:tag="grid_layout"
+       android:onClick="onClick"/>
 
-</RelativeLayout>
+</LinearLayout>
