--- a/T-carzy/Day07_01/res/layout/linearlayout_reigster.xml
+++ b/T-carzy/Day07_01/res/layout/linearlayout_reigster.xml
@@ -1,167 +1,152 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="用户名" />
-
+            android:text="用  户 名" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="输入字符在肉眼识别内" />
+            android:hint="字符在2~10个之间" />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="输入密码" />
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="输入字符在一万以内"
+            android:hint="字符在2~10个之间"
             android:password="true" />
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="确认密码" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="字符在2~10个之间"
+            android:password="true" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <TextView
+            android:id="@+id/tvSex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="选择性别" />
+        <RadioGroup
+            android:id="@+id/rgSex"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="男" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="女" />
+        </RadioGroup>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <TextView
+            android:id="@+id/tvAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="所在地" />
+        <Spinner
+            android:id="@+id/spinCity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/citys" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <TextView
-            android:layout_width="wrap_content"
+             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="确认密码" />
-
-        <EditText
+            android:layout_marginTop="15dp"
+            android:text="爱好:" />
+        <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="输入同上字符"
-            android:password="true" />
+            android:layout_marginTop="10dp"
+            android:columnCount="2" >
+            <Switch
+                android:text="读书" 
+                android:textOn="on"
+                android:textOff="off"/>
+            <Switch
+                android:layout_marginLeft="10dp"
+                android:text="旅游" 
+                android:textOn="on"
+                android:textOff="off"/>
+            <Switch
+                android:text="电玩" 
+                android:textOn="on"
+                android:textOff="off"/>
+            <Switch
+                android:layout_marginLeft="10dp"
+                android:text="游泳" 
+                android:textOn="on"
+                android:textOff="off"/>            
+        </GridLayout>
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
+        android:layout_height="wrap_content" >
+        <View
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1" />
+        <Button
+            android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="选择性别" />
-
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <RadioButton
-                android:id="@+id/wc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="女" />
-
-            <RadioButton
-                android:id="@+id/cw"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="男" />
-        </RadioGroup>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="所在地" />
-
-        <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:entries="@array/years" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="爱好" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="读书" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="旅游" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="音乐" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="电玩" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal" >
-
-        <Button
+            android:background="@drawable/btn_bg"
+            android:drawableLeft="@drawable/login32x32"
+            android:padding="3dp"
+            android:text="注册"
+            android:textColor="#fff" />
+        <View
             android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_weight="1"
-            android:visibility="invisible" />
-
+            android:layout_height="40dp"
+            android:layout_weight="1" />
         <Button
+            android:id="@+id/btnExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="注册" />
-
-        <Button
+            android:layout_marginTop="10dp"
+            android:background="@drawable/btn_bg"
+            android:padding="3dp"
+            android:text="取消"
+            android:textColor="#fff" />
+        <View
             android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_weight="1"
-            android:visibility="invisible" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="取消" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_weight="1"
-            android:visibility="invisible" />
+            android:layout_height="40dp"
+            android:layout_weight="1" />
     </LinearLayout>
-
 </LinearLayout>
